--- a/wwwroot/style.css
+++ b/wwwroot/style.css
@@ -1,3 +1,61 @@
+.colour-block {
+  background: #2d2d30;
+  width: 100%;
+  padding: 7% 20% 15% 20%;
+  color: #fff;
+}
+.white-block {
+  background: #fff;
+  width: 100%;
+  padding: 7% 20% 5% 20%;
+  color: #2d2d30;
+  min-height: 100%;
+  border-radius: 100%;
+  background: white;
+  width: 160%;
+  margin-left: -30%;
+  height: 100%;
+  margin-top: -100px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+h1 {
+  text-align: center;
+  font-size: 80px;
+  font-weight: normal;
+}
+p {
+  font-size: 20px;
+}
+
+/*------------------*/
+/*  SKEW CLOCKWISE  */
+/*------------------*/
+.skew-cc {
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  left: 0px;
+  background: linear-gradient(to right bottom, #2d2d30 49%, #fff 50%), linear-gradient(-50deg, #ffffff 16px, #000 0);
+}
+
+/*-------------------------*/
+/* SKEW COUNTER CLOCKWISE  */
+/*-------------------------*/
+.skew-c {
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  left: 0px;
+}
+.skew-ccc {
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  left: 0px;
+  background: linear-gradient(to left bottom, #fff 49%, #2d2d30 50%);
+}
+
 body {
   font-family: "Nunito", sans-serif !important;
   font-size: 11pt !important;
@@ -47,6 +105,7 @@ video {
   width: auto;
   height: auto;
   z-index: 0;
+  transform: rotate(180deg);
 }
 
 .nav-link {
@@ -130,6 +189,7 @@ body {
   background: #2d2d30;
   color: #74b64a;
   margin-bottom: 70px;
+  margin-top: 50px;
 }
 
 .development-card {
@@ -146,7 +206,7 @@ body {
 }
 .card-text,
 .card-mission {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .space-top {
@@ -161,24 +221,9 @@ body {
   opacity: 0;
 }
 
-/* .fadethisdivasd {
-  top: 0;
-  opacity: 0;
- } */
 .underline-title {
-  color: #4b5d3b !important;
+  color: #74b64a !important;
   text-align: center;
-}
-.underline-title:after {
-  content: "";
-  height: 2px;
-  width: 8%;
-  background-color: #4b5d3b;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%);
-  top: 60px;
 }
 
 .underline-logos-title:after {
@@ -251,6 +296,15 @@ body {
   margin-bottom: 20px;
   opacity: 0.6;
   border-radius: 100%;
+}
+
+.contact-picture-avatar {
+  width: 120px;
+  padding: 10px;
+  margin-bottom: 20px;
+  opacity: 0.6;
+  border-radius: 45%;
+  background: #2d2d30;
 }
 
 .contact-logos img {
