coinjoin api page

--- a/src/app.css
+++ b/src/app.css
@@ -8,15 +8,17 @@
   scrollbar-width: thin;
   scrollbar-color: grey black;
 }
+a {
+  text-decoration: underline;
+}
+
+html {
+  scroll-behavior: smooth;
+}
 
 html,
 body {
   height: 100%;
-}
-
-html {
-  scroll-behaviour: smooth;
-  webkit-scroll-behavior: smooth;
 }
 
 body.mobile-menu-active {
@@ -24,10 +26,6 @@ body.mobile-menu-active {
 }
 
 @layer base {
-  html {
-    scroll-behaviour: smooth;
-    webkit-scroll-behavior: smooth;
-  }
   h1 {
     @apply text-5xl;
   }
